--- a/app/src/main/res/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/activity_add_post.xml
@@ -9,21 +9,42 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/materialCardView4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="4dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="20dp"
+                android:text="@string/title_add_post"
+                android:textAlignment="center"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+        </com.google.android.material.card.MaterialCardView>
+
         <LinearLayout
             android:id="@+id/photo_layout"
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:layout_margin="20dp"
             android:background="@drawable/dotted"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/materialCardView4"
             tools:layout_editor_absoluteX="20dp">
 
             <ImageView
                 android:id="@+id/img_story"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:padding="100dp"
                 android:contentDescription="@string/logo_image"
-                android:padding="80dp"
                 android:src="@drawable/ic_baseline_image_24" />
 
         </LinearLayout>
