--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -37,8 +37,7 @@
                 android:text="@string/title_edit_profile"
                 android:textAlignment="center"
                 android:textSize="18sp"
-                android:textStyle="bold"
-                android:textColor="#12121D"/>
+                android:textStyle="bold" />
 
         </com.google.android.material.card.MaterialCardView>
 
@@ -47,6 +46,7 @@
             android:layout_width="124dp"
             android:layout_height="119dp"
             android:layout_marginTop="20dp"
+            android:clickable="true"
             android:src="@drawable/user"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -58,7 +58,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/change_image_button"
-            android:textColor="@color/black"
+            android:enabled="false"
             android:textSize="16sp"
             android:textStyle="bold"
             android:layout_marginTop="15dp"
