--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -23,34 +23,37 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
+                android:id="@+id/back_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/baseline_arrow_back_24"
                 android:layout_gravity="center_vertical"
-                android:paddingLeft="30dp"/>
+                android:paddingStart="30dp"
+                android:contentDescription="@string/back_button"
+                />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="20dp"
                 android:text="@string/title_result"
+
                 android:textAlignment="center"
                 android:textSize="18sp"
-                android:textStyle="bold"
-                android:textColor="#12121D"/>
+                android:textStyle="bold" />
 
         </com.google.android.material.card.MaterialCardView>
 
     <TextView
         android:id="@+id/result_title"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/result_title"
         android:paddingTop="20dp"
+        android:paddingHorizontal="32dp"
         android:paddingBottom="15dp"
         android:textStyle="bold"
         android:textSize="18sp"
-        android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="@id/divider"
         app:layout_constraintTop_toBottomOf="@+id/materialCardView"/>
 
@@ -65,10 +68,11 @@
 
     <ImageView
         android:id="@+id/result_image"
-        android:layout_width="350dp"
-        android:layout_height="169dp"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
         android:scaleType="center"
         android:layout_marginTop="20dp"
+        android:layout_marginHorizontal="32dp"
         android:src="@drawable/hawar_daun_bakteri"
         app:layout_constraintTop_toBottomOf="@+id/divider"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -89,7 +93,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/definisi"
-        android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="bold"
         android:layout_marginTop="15dp"
@@ -98,12 +101,11 @@
 
     <TextView
         android:id="@+id/result_definisi"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:justificationMode="inter_word"
         android:text="@string/result_definisi"
-        android:textColor="@color/black"
         android:textSize="15sp"
         android:paddingLeft="32dp"
         android:paddingRight="32dp"
@@ -126,7 +128,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/solusi"
-        android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="bold"
         android:layout_marginTop="15dp"
@@ -135,19 +136,20 @@
 
     <TextView
         android:id="@+id/result_solusi"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:paddingBottom="50dp"
         android:justificationMode="inter_word"
         android:text="@string/result_solusi"
-        android:textColor="@color/black"
         android:textSize="15sp"
         android:paddingLeft="32dp"
         android:paddingRight="32dp"
         app:layout_constraintTop_toBottomOf="@id/solusi"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
+
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
