--- a/app/src/main/res/layout/fragment_forum.xml
+++ b/app/src/main/res/layout/fragment_forum.xml
@@ -48,10 +48,10 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="32dp"
-        android:background="?attr/colorPrimary"
+        android:backgroundTint="?attr/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/baseline_border_color_24"
+        app:srcCompat="@drawable/baseline_add_24"
         android:contentDescription="@string/button_add_post" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
