--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,58 +1,170 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.google.android.material.card.MaterialCardView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:cardCornerRadius="10dp"
-        app:cardElevation="4dp"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/user_image"
-            android:layout_width="50dp"
-            android:layout_margin="20dp"
-            android:layout_height="50dp"
-            android:contentDescription="@string/image_for_user_photo"
-            android:src="@drawable/user" />
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/welcome"
-            android:layout_marginTop="20dp"
-            android:layout_marginStart="80dp"
-            app:layout_constraintStart_toEndOf="@+id/user_image" />
-        <TextView
-            android:id="@+id/username"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="45dp"
-            android:layout_marginStart="80dp"
-            android:text="@string/username"
-            />
-
-        <ImageButton
-            android:id="@+id/search_button"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_gravity="end"
-            android:background="@android:color/transparent"
-            android:contentDescription="@string/search_button"
-            android:src="@drawable/baseline_search_24"
-            android:clickable="true"
-            android:focusable="true" />
-    </com.google.android.material.card.MaterialCardView>
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/searchbar_scrolling_view_behavior">
+        <!-- Screen content goes here. -->
+       <androidx.constraintlayout.widget.ConstraintLayout
+           android:layout_width="match_parent"
+           android:layout_height="match_parent">
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/top_bar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:cardCornerRadius="10dp"
+                app:cardElevation="4dp"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/user_image"
+                    android:layout_width="50dp"
+                    android:layout_margin="20dp"
+                    android:layout_height="50dp"
+                    android:contentDescription="@string/image_for_user_photo"
+                    android:src="@drawable/user" />
+
+                <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/welcome"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginStart="80dp"
+                    app:layout_constraintStart_toEndOf="@+id/user_image" />
+                <TextView
+                    android:id="@+id/username"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="45dp"
+                    android:layout_marginStart="80dp"
+                    android:text="@string/username"
+                    />
+
+                <ImageButton
+                    android:id="@+id/search_button"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_gravity="end"
+                    android:background="@android:color/transparent"
+                    android:contentDescription="@string/search_button"
+                    android:src="@drawable/baseline_search_24"
+                    android:clickable="true"
+                    android:focusable="true" />
+            </com.google.android.material.card.MaterialCardView>
+
+           <TextView
+               android:id="@+id/textView2"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_marginStart="16dp"
+               android:layout_marginTop="16dp"
+               android:text="News"
+               android:textSize="28sp"
+               android:textStyle="bold"
+               app:layout_constraintStart_toStartOf="parent"
+               app:layout_constraintTop_toBottomOf="@+id/top_bar" />
+
+           <ProgressBar
+               android:id="@+id/progressBar"
+               style="?android:attr/progressBarStyle"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:visibility="gone"
+               app:layout_constraintBottom_toBottomOf="parent"
+               app:layout_constraintEnd_toEndOf="parent"
+               app:layout_constraintStart_toStartOf="parent"
+               app:layout_constraintTop_toTopOf="parent"
+               tools:visibility="visible" />
+
+           <com.google.android.material.card.MaterialCardView
+               android:id="@+id/materialCardView2"
+               android:layout_width="match_parent"
+               android:layout_height="300dp"
+               android:layout_marginHorizontal="16dp"
+               android:layout_marginTop="16dp"
+               app:cardCornerRadius="20dp"
+               app:layout_constraintTop_toBottomOf="@+id/textView2"
+               tools:layout_editor_absoluteX="16dp">
+
+
+
+               <ImageView
+                   android:id="@+id/post_image"
+                   android:layout_width="match_parent"
+                   android:layout_height="match_parent"
+                   android:scaleType="center"
+                   android:background="?attr/colorOnPrimarySurface"
+                    />
+
+               <TextView
+                   android:id="@+id/post_date"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:textSize="18sp"
+                   android:layout_marginStart="16dp"
+                   android:textStyle="bold"
+                   android:layout_gravity="bottom"
+                   android:layout_marginBottom="54sp"
+                   android:textColor="@color/white"
+                   android:text="Updated"/>
+
+               <TextView
+                   android:id="@+id/post_title"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:textSize="24sp"
+                   android:layout_marginStart="16dp"
+                   android:textStyle="bold"
+                   android:layout_gravity="bottom"
+                   android:layout_marginBottom="16sp"
+                   android:textColor="@color/white"
+                   android:text="Title Post"/>
+           </com.google.android.material.card.MaterialCardView>
+
+
+
+           <com.google.android.material.button.MaterialButton
+               android:id="@+id/btn_scan"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:layout_marginHorizontal="16dp"
+               android:layout_marginTop="32dp"
+               android:text="@string/scan_penyakit_padi"
+               android:textAllCaps="false"
+               app:layout_constraintTop_toBottomOf="@+id/materialCardView2"
+               tools:layout_editor_absoluteX="16dp" />
+
+
+
+
+
+       </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+    </androidx.core.widget.NestedScrollView>
+    <com.google.android.material.search.SearchView
+        android:id="@+id/search_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_anchor="@id/search_button"
+        android:hint="Masukkan text">
+        <!-- Search suggestions/results go here (ScrollView, RecyclerView, etc.). -->
+    </com.google.android.material.search.SearchView>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
